styles/globals.scss
@tailwind base;
@tailwind components;
@tailwind utilities;

$black: (
100: rgba(190, 190, 190, 1),
200: rgba(125, 125, 125, 1),
300: rgba(48, 48, 48, 1)
);
$beige: (
	100:rgba(246, 237, 230, 1),
	200: rgba(212, 205, 200, 1),
	300: rgba(159, 147, 138, 1)
);
$pink:(
	100: rgba(249, 224, 224, 1),
	200: rgba(228, 205, 205, 1),
	300: rgba(185, 149, 149, 1)
);
$brown: (
	100: rgba(144, 106, 101, 1),
	200: rgba(138, 74, 74, 1),
	300: rgba(76, 26, 26, 1)
);
$white: #f7f7f7;

html * {
	font-family: "Montserrat", sans-serif;
	-webkit-tap-highlight-color: transparent;
	/*DISABLE HIGHLIGHTS*/
	user-select: none; /* supported by Chrome and Opera */
	-webkit-user-select: none; /* Safari */
	-khtml-user-select: none; /* Konqueror HTML */
	-moz-user-select: none; /* Firefox */
	-ms-user-select: none; /* Internet Explorer/Edge */
}

#loading-container{
	background-color: map-get($map: $black, $key: 100);
	opacity: 50%;
}

#loading-cookie{
	width: 60px;
	position: absolute;
	z-index: 100;
	left: calc(50% - 30px);
	top: calc(50% - 30px);
}

#header {
	background-color: map-get($map: $beige, $key: 300);

	#logo {
		margin-left: calc(50% - 50px);
		border-radius: 50%;
		z-index: 1;
	}

	#header-text {
		font-size: 36px;
		font-weight: 400;
		background-color: map-get($map: $black, $key: 300);
		opacity: 75%;
		color: $white;
		border-radius: 15px;
		padding: 15px 20px 15px 20px;
		z-index: 1;
	}
}

#footer{
	background-color: map-get($map: $beige, $key: 300);;
	width: 100vw;
	height: 70px;
	bottom: 0px;
	justify-content: center;
	display: flex;
	gap: 10px;
	align-items: center;
}

#menu-background {
	background-color: map-get($map: $pink, $key: 200);
	position: absolute;
	min-height: 130vh;
	opacity: 85%;
	z-index: 98;
	display: flex;
	flex-direction: column;
	flex-grow: 1;
	gap: 15px;
	padding-top: 13vh;
	align-items: center;
}

.menu-items {
	width: fit-content;
	z-index: 99;
	font-size: 24px;
	font-weight: 500;
	cursor: pointer;
	user-select: none;

	&:hover {
		animation-name: textHover;
		animation-duration: 0.2s;
		animation-timing-function: ease;
		animation-iteration-count: 1;
		animation-fill-mode: forwards;
	}
}

@keyframes textHover {
	from {
		transform: scale(1);
	}
	to {
		transform: scale(1.1);
		text-decoration: underline;
	}
}

#content-area {
	width: 100vw;
	padding-top: 50px;
	padding-bottom: 50px;
	display: flex;
	flex-direction: column;
	align-items: center;
	z-index: 0;
	min-height: calc(100vh - 200px);
	background-image: url("../public/background.jpg");
}

.order-item-main {
	display: flex;
	flex-direction: row;
	align-items: flex-start;
	margin: 10px 0px 10px 0px;
	padding: 5px 5px 5px 5px;
	border: 1px;
	background-color: map-get($map: $beige, $key: 100);
	border-style: solid;
	border-radius: 10px;
	box-shadow: 0px 1px 3px 3px rgba(0, 0, 0, 0.25);
	height: fit-content;
	width: 98vw;
	z-index: 5;
	cursor: pointer;
}

.qty {
	float: right;
}

.order-item-pic-container {
	position: relative;
	min-width: 35%;

	&#item-select{
		min-width: 95%;
	}

	img {
		border-radius: 10px;
		object-fit: cover;
	}
}

.order-item-caption-container{
	padding: 0px 10px 10px 10px;
	margin: 10px 2% 0px 2%;
	background-color: map-get($map: $pink, $key: 200);
	border-radius: 10px;
	max-width: 100vw;
}

.order-item-description-container {
	max-width: 65%;
	max-height: 100%;
	justify-items: start;
	padding-left: 5px;
	overflow: hidden;
}

.order-item-name {
	font-family: "Caramel", cursive;
	font-size: 30px;
	width: fit-content;
}

.order-item-description {
	display: -webkit-box;
	-webkit-line-clamp: 3;
	line-height: 1.5;
	-webkit-box-orient: vertical;
	font-size: 13px;
	text-overflow: ellipsis;
	overflow: hidden;
}

.order-item-qty {
	margin-top: 20px;
	font-size: 18px;
	text-align: center;
	width: 100%;
}

.order-item-quantity-container {
	font-size: 24px;
	margin-top: 10px;
	background-color: map-get($map: $beige, $key: 200);;
	border-radius: 5px;
	display: flex;
	width: 130px;
	justify-content: space-between;

	button {
		padding: 3px;
		border: 1px;
		border-style: solid;
		border-color: map-get($map: $black, $key: 100);;
		border-radius: 5px;
		background-color: map-get($map: $pink, $key: 200);
		box-shadow: 0px 2px 3px 1px rgba(0, 0, 0, 0.25);
	}
}

.cart-container {
	position: fixed;
	bottom: 4vh;
	right: 6vw;
	width: min-content;
	height: min-content;
	padding: 13px;
	border-radius: 50%;
	background-color: map-get($map: $pink, $key: 200);
	box-shadow: 0px 3px 5px 2px rgba(0, 0, 0, 0.25);
}

.cart-number{
	position: fixed;
	bottom: 9vh;
	right: 8vw;
	font-size: 24px;
	font-weight: 600;
	color: map-get($map: $brown, $key: 300);
}

.checkout-item-container{
	width: 92vw;
	height: max-content;
	display: flex;
	border: 1px;
	border-style: solid;
	border-color: black;
	padding: 5px;
	border-radius: 10px;
	overflow-y: hidden;
	overflow-x: scroll;
	background-color: map-get($map: $beige, $key: 100);
	box-shadow: 0px 3px 5px 2px rgba(0, 0, 0, 0.25);

	-ms-overflow-style: none;
  	scrollbar-width: none;

	&::-webkit-scrollbar{
		display: none;
	}
}

.checkout-item-pic-container{
	position: relative;
	min-width: 70px;
	width: 25vw;

	img {
		border-radius: 10px;
		object-fit: cover;
	}
}

.checkout-item-info{
	padding-left: 10px;
	display: flex;
	flex-direction: column;
	min-width: max-content;
	height: 100%;
	flex-grow: 100;

	.checkout-item-name{
		font-family: "Caramel", cursive;
		font-size: 30px;
	}
	
}

.checkout-item-total{
	min-width: max-content;
	align-self:flex-end;
	font-weight: 500;
}

.checkout-line{
	width: 90vw;
	border: 1px;
	border-style: solid;
	border-color: map-get($map: $black, $key: 200);
	margin: 10px 0px 10px 0px;
}

.checkout-total{
	font-size: 18px;
	font-weight: 500;
}

#order-steps-container{
	border: 2px;
	border-style: solid;
	border-color: map-get($map: $black, $key: 200);
	border-radius: 5px;
	display: flex;
	height: 25px;
	width: 90%;
	padding: 0px 5px 0px 5px;
	gap: 2px;
	justify-content:space-evenly;
	margin-bottom: 10px;
	
}

.order-steps{
	font-size: 10px;
	font-weight: 300;
	display: flex;
	align-items: center;
}

.order-steps-arrow{
	height: 100%;
	fill: map-get($map: $black, $key: 200);
}

.order-steps-fill{
	display: flex;
}

.dropdown-container{
	border: 1px;
	border-style: solid;
	width: 95vw;
	padding: 10px;
	border-radius: 5px;
	border-color: map-get($map: $black, $key: 200);
	background-color: $white
}

.dropdown-arrow{
	height: 20px;
	fill: map-get($map: $black, $key: 200);
	position: relative;
	float: right;
	top: 2px;
}

.dropdown-list-container{
	display: flex;
	flex-direction: column;
	background-color: map-get($map: $beige, $key: 200);
	border-color: map-get($map: $black, $key: 200);
	border: 1px;
	border-style: solid;
	align-items: center;
	border-radius: 5px;
	overflow: hidden;
	margin-bottom: 10px;
	gap: 10px;

	&#payment form{
		margin-top: 10px;
		display: flex;
		flex-direction: column;
		gap: 10px;
		width: 90%;
		input{
			width: 100%;
			padding: 3px;
			border: 1px;
			border-style: solid;
			border-radius: 5px;
			border-color: map-get($map: $black, $key: 200);
		}

		input[type=file]{
			display: none;
		}
		
	}
}

.checkout-delivery-item-container{
	border: 1px;
	border-style: solid;
	padding: 10px;
	border-radius: 5px;
	font-weight: 500;
	background-color: map-get($map: $pink, $key: 100);
	min-width: fit-content;
	width: 50vw;
	text-align: center;
	display: flex;
	flex-direction: column;
	box-shadow: 0px 1px 3px 3px rgba(0, 0, 0, 0.25);

	&-clicked{
		border: 1px;
		border-style: solid;
		padding: 10px;
		border-radius: 5px;
		font-weight: 500;
		background-color: #03c04a;
		min-width: fit-content;
		width: 50vw;
		text-align: center;
		display: flex;
		flex-direction: column;
		box-shadow: 0px 1px 3px 3px rgba(0, 0, 0, 0.25);

	}
}

.carousel-main-container{
	top: 20px;
	width: 100vw;
	height: calc(((100/4) * 3) * 1vw);
	overflow: hidden;
	position: relative;
}

.carousel-reel-container{
	position: relative;

	.carousel-image{
		width: 100vw;
		position: absolute;
	}
}

